<resources>
    <string name="app_name">Nob Hill</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Settings</string>
    <string name="key">AIzaSyBc1VB3Oe_T-iXzlEFYXjW0U_2torhY4BQ</string>
    <string name="friends">My Friends</string>
    <string name="start_a_challenge">New Challenge</string>
    <string name="acitve_challenge">Current Challenges</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="menu_main">Main Menu</string>
    <string name="sub_name">Destinations</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="destination_list">Destinations</string>
    <string name="action_search">Search</string>
    <string name="action_help"><b>Help Page</b></string>
    <string name="name">List by Name</string>
    <string name="abbr">List by Abbr</string>
    <string name="sort">Sort</string>
    <string name="buildings">All Buildings</string>
    <string name="parking">Parking</string>
    <string name="computers">Computer Pods</string>
    <string name="food">Dining</string>
    <string name="libraries">Libraries</string>
    <string name="dorms">Housing</string>
    <string name="no_connection">No Network Connection!</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try Again</string>
    <string name="error_title">ERROR</string>
    <string name="cont">Continue</string>
    <string name="settings">Settings</string>
    <string name="nh_website">Nob Hill Website</string>
    <string name="filter">Filter your Choice</string>
    <string name="events">Events</string>
    <string name="unm">University of New Mexico</string>
    <string name="fd"> Food &amp; Drink</string>
    <string name="art">Art</string>
    <string name="dance">Dancing</string>
    <string name="music">Live Music</string>
    <string name="film">Theater &amp; Film</string>
    <string name="night">Night Life</string>
    <string name="filt">Nob Hill Offerings</string>
    <string name="places">Places</string>
    <string-array name="places">
        <item >ATM</item>
        <item >Bank</item>
        <item >Cafe</item>
        <item >Fire-Station</item>
        <item >Hospital</item>
        <item >Pharmacy</item>
        <item >Police</item>
        <item >Restaurant</item>
        <item >Shopping Mall</item>
    </string-array>

</resources>
